--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,5 +29,5 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-    - run: npm test:e2e
-    - run: npm test:cov
+    - run: npm run test:e2e
+    - run: npm run test:cov
