--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,9 +14,13 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    # Service containers to run with `runner-job`
     services:
+      # Label used to access the service container
       postgres:
+        # Docker Hub image
         image: postgres
+        # Provide the password for postgres
         env:
           POSTGRES_USER: test_user
           POSTGRES_PASSWORD: test_pass
@@ -28,6 +32,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
         ports:
+          # Maps tcp port 5432 on service container to the host
           - 5432:5432
 
     strategy:
@@ -47,7 +52,7 @@ jobs:
     - run: npm test
     - run: npm run test:e2e
       env:
-        POSTGRES_HOST: postgres
+        POSTGRES_HOST: localhost
         POSTGRES_PORT: 5432
         POSTGRES_USER: test_user
         POSTGRES_PASSWORD: test_pass
